--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "semi": true,
+  "tabWidth": 2,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "useTabs": false,
+  "printWidth": 80,
+
+  "arrowParens": "avoid",
+  "endOfLine": "auto"
 }
