--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - lint
+  - sonar
 eslint:
   stage: lint
   #image: node:18
@@ -18,3 +19,24 @@ eslint:
     # Configure ESLint (will read your .eslintrc.ts file)
     # Run ESLint
     - yarn lint
+
+sonarqube-check:
+  stage: sonar
+  image: 
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  tags:
+    - "sonar"
+  script: 
+    - sonar-scanner
+  allow_failure: true
+  only:
+    - master
+    - develop
