--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ eslint:
     - yarn install
     # Configure ESLint (will read your .eslintrc.ts file)
     # Run ESLint
-    - yarn lint
+    - yarn lint:check
 
 sonarqube-check:
   stage: sonar
