feat: setup sentry

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,7 @@ APP_SWAGGER_Title="NestJS-Board API"
 APP_SWAGGER_Description="This is NestJS-Board API documentation."
 APP_SWAGGER_Version="0.0.1"
 
+SENTRY_DSN="sentry_key"
+
 ROOT_USERNAME=root
 ROOT_PASSWORD=example
