Feat: setup sentry

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,14 @@ DB_PASSWORD=secret
 DB_DATABASE=web3
 DB_TIMEZONE="+08:00"
 
+CORS_WHITE="http://192.168.1.88:3000"
+CORS_METHOD="GET,PUT,POST,DELETE,UPDATE"
+
 APP_SWAGGER_Title="NestJS-Board API"
 APP_SWAGGER_Description="This is NestJS-Board API documentation."
 APP_SWAGGER_Version="0.0.1"
+
+SENTRY_DSN="sentry_key"
 
 ROOT_USERNAME=root
 ROOT_PASSWORD=example
