--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,16 @@ services:
       - 8080:80
     environment:
       MYSQL_ROOT_PASSWORD: ${ROOT_PASSWORD}
+  backend:
+    # image: a20688392/ipfs-blog-backend:0.0.1
+    build:
+      dockerfile: Dockerfile
+      context: .
+      target: production
+    command: /bin/sh -c "sh /migration-entrypoint.sh"
+    env_file:
+    - .env
+    ports:
+      - 3000:3000
+    depends_on:
+      - db
