--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ DB_PASSWORD=secret
 DB_DATABASE=web3
 DB_TIMEZONE="+08:00"
 
+APP_SECRET=undefine
+
 CORS_WHITE="http://192.168.1.88:3000"
 CORS_METHOD="GET,PUT,POST,DELETE,UPDATE"
 
